--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -11,6 +11,6 @@
 <body>
     <header></header>
     <footer>
-        <p>Best School</p></footer>
+        <p>Holberton School</p></footer>
 </body>
 </html>
